// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBar renders SideBar 1`] = `
<Menu
  borderless={true}
  className="side-nav"
  fixed="left"
  stackable={true}
  vertical={true}
>
  <SideBarItem
    highlight={true}
    icon="home"
    label="Home"
  />
  <SideBarItem
    highlight={false}
    icon="fire"
    label="Trending"
  />
  <SideBarItem
    highlight={false}
    icon="spy"
    label="Followers"
  />
  <Divider />
  <SideBarHeader
    title="Library"
  />
  <SideBarItem
    highlight={false}
    icon="history"
    label="History"
  />
  <SideBarItem
    highlight={false}
    icon="clock"
    label="Watch later"
  />
  <SideBarItem
    highlight={false}
    icon="thumbs up"
    label="Liked videos"
  />
  <Divider />
  <Subscriptions />
  <SideBarHeader
    title="More from Youtube"
  />
  <SideBarItem
    highlight={false}
    icon="film"
    label="Movies and Shows"
  />
  <Divider />
  <SideBarItem
    highlight={false}
    icon="flag"
    label="Report history"
  />
  <SideBarItem
    highlight={false}
    icon="help circle"
    label="Help"
  />
  <SideBarItem
    highlight={false}
    icon="comment"
    label="Send feedback"
  />
  <Divider />
  <SideBarFooter />
</Menu>
`;

exports[`SideBarHeader renders SideBar 1`] = `
<Menu
  borderless={true}
  className="side-nav"
  fixed="left"
  stackable={true}
  vertical={true}
>
  <SideBarItem
    highlight={true}
    icon="home"
    label="Home"
  />
  <SideBarItem
    highlight={false}
    icon="fire"
    label="Trending"
  />
  <SideBarItem
    highlight={false}
    icon="spy"
    label="Followers"
  />
  <Divider />
  <SideBarHeader
    title="Library"
  />
  <SideBarItem
    highlight={false}
    icon="history"
    label="History"
  />
  <SideBarItem
    highlight={false}
    icon="clock"
    label="Watch later"
  />
  <SideBarItem
    highlight={false}
    icon="thumbs up"
    label="Liked videos"
  />
  <Divider />
  <Subscriptions />
  <SideBarHeader
    title="More from Youtube"
  />
  <SideBarItem
    highlight={false}
    icon="film"
    label="Movies and Shows"
  />
  <Divider />
  <SideBarItem
    highlight={false}
    icon="flag"
    label="Report history"
  />
  <SideBarItem
    highlight={false}
    icon="help circle"
    label="Help"
  />
  <SideBarItem
    highlight={false}
    icon="comment"
    label="Send feedback"
  />
  <Divider />
  <SideBarFooter />
</Menu>
`;

exports[`SideBarHeader renders SideBarHeader with props.title='' 1`] = `
<MenuItem>
  <MenuHeader
    className="side-bar-header"
  />
</MenuItem>
`;

exports[`SideBarHeader renders SideBarHeader with sample title 1`] = `
<MenuItem>
  <MenuHeader
    className="side-bar-header"
  >
    SAMPLE TITLE
  </MenuHeader>
</MenuItem>
`;

exports[`renders HeaderNav 1`] = `
<Menu
  borderless={true}
  className="side-nav"
  fixed="left"
  stackable={true}
  vertical={true}
>
  <SideBarItem
    highlight={true}
    icon="home"
    label="Home"
  />
  <SideBarItem
    highlight={false}
    icon="fire"
    label="Trending"
  />
  <SideBarItem
    highlight={false}
    icon="spy"
    label="Followers"
  />
  <Divider />
  <SideBarHeader
    title="Library"
  />
  <SideBarItem
    highlight={false}
    icon="history"
    label="History"
  />
  <SideBarItem
    highlight={false}
    icon="clock"
    label="Watch later"
  />
  <SideBarItem
    highlight={false}
    icon="thumbs up"
    label="Liked videos"
  />
  <Divider />
  <Subscriptions />
  <SideBarHeader
    title="More from Youtube"
  />
  <SideBarItem
    highlight={false}
    icon="film"
    label="Movies and Shows"
  />
  <Divider />
  <SideBarItem
    highlight={false}
    icon="flag"
    label="Report history"
  />
  <SideBarItem
    highlight={false}
    icon="help circle"
    label="Help"
  />
  <SideBarItem
    highlight={false}
    icon="comment"
    label="Send feedback"
  />
  <Divider />
  <SideBarFooter />
</Menu>
`;

exports[`renders SideBar 1`] = `
<Menu
  borderless={true}
  className="side-nav"
  fixed="left"
  stackable={true}
  vertical={true}
>
  <SideBarItem
    highlight={true}
    icon="home"
    label="Home"
  />
  <SideBarItem
    highlight={false}
    icon="fire"
    label="Trending"
  />
  <SideBarItem
    highlight={false}
    icon="spy"
    label="Followers"
  />
  <Divider />
  <SideBarHeader
    title="Library"
  />
  <SideBarItem
    highlight={false}
    icon="history"
    label="History"
  />
  <SideBarItem
    highlight={false}
    icon="clock"
    label="Watch later"
  />
  <SideBarItem
    highlight={false}
    icon="thumbs up"
    label="Liked videos"
  />
  <Divider />
  <Subscriptions />
  <SideBarHeader
    title="More from Youtube"
  />
  <SideBarItem
    highlight={false}
    icon="film"
    label="Movies and Shows"
  />
  <Divider />
  <SideBarItem
    highlight={false}
    icon="flag"
    label="Report history"
  />
  <SideBarItem
    highlight={false}
    icon="help circle"
    label="Help"
  />
  <SideBarItem
    highlight={false}
    icon="comment"
    label="Send feedback"
  />
  <Divider />
  <SideBarFooter />
</Menu>
`;

exports[`renders SideBarHeader with props.title='' 1`] = `
<MenuItem>
  <MenuHeader
    className="side-bar-header"
  />
</MenuItem>
`;

exports[`renders SideBarHeader with sample title 1`] = `
<MenuItem>
  <MenuHeader
    className="side-bar-header"
  >
    SAMPLE TITLE
  </MenuHeader>
</MenuItem>
`;
